<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/claContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.activity.ExchangeRateActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_bcp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.57">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorGray_2"
                android:orientation="horizontal"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:background="@drawable/shape_round_white_top_left"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tu_envias"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/eteSend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="0.00"
                            android:inputType="textPersonName|text|numberDecimal|textEmailAddress"
                            android:text="0.00"
                            android:selectAllOnFocus="true"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/shape_round_white_bottom_left"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tu_recibes"
                            android:textColor="@color/colorGray"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/eteReceive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:ems="10"
                            android:enabled="false"
                            android:hint="0.00"
                            android:inputType="textPersonName|text|numberDecimal|textEmailAddress"
                            android:text="0.00"
                            android:textColor="@color/colorBlue"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView1" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tviSend"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="1dp"
                        android:background="@drawable/shape_round_blue_top_right"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/dolares"
                        android:textColor="@color/colorGray_2"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.50" />

                    <TextView
                        android:id="@+id/tviReceive"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/shape_round_blue_bottom_right"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/soles"
                        android:textColor="@color/colorGray_2"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/guideline"
                        app:layout_constraintVertical_bias="0.50" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="76dp" />

                    <ImageView
                        android:id="@+id/iviChange"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/shape_circle_white"
                        android:padding="2dp"
                        android:tint="@color/colorBlue"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_rotate" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tviChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif"
                android:text="Compra: 3.25 | venta: 3.29"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorLightBlue"
                android:gravity="center"
                android:padding="18dp"
                android:text="@string/empieza_tu_operacion"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tviChange"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/claLoading"
        layout="@layout/custom_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/claContainer"
        app:layout_constraintEnd_toEndOf="@+id/claContainer"
        app:layout_constraintStart_toStartOf="@+id/claContainer"
        app:layout_constraintTop_toTopOf="@+id/claContainer">

    </include>

</androidx.constraintlayout.widget.ConstraintLayout>